fix admin layout issue

--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -2,3 +2,7 @@
 #sf_admin_container th {
   padding: 0.5em 1em;
 }
+/* display actions in block */
+#sf_admin_container ul.sf_admin_td_actions li {
+  display: block;
+}
